--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1 {
 
 h2 {
     font-family: "Cedarville Cursive", serif;
-    font-size: 1.5em;
+    font-size: 3.5rem;
     color: #d32f2f;
 }
 
